--- a/src/abstract/_functions.scss
+++ b/src/abstract/_functions.scss
@@ -99,6 +99,21 @@
     font-weight: 300;
 }
 
+//label
+@mixin label($align){
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+//input
+@mixin input(){
+  width: 100%;
+  padding: 0 16px;
+  vertical-align: middle;
+  height: 56px;
+  font-size: 16px;
+}
+
 //font
 @mixin typography($fontSize, $align, $lineHeight, $weight) {
     width: 100%;
@@ -128,10 +143,10 @@ EFFECTS
 }
 
 @mixin cardShadow() {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.219) 0px 5px 15px;
 }
 
-@mixin shadowSpecial() {
+@mixin specialShadow() {
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
         rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
