--- a/src/abstract/_variables.scss
+++ b/src/abstract/_variables.scss
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;700;800&display=swap');
 
 //Variables
-$color1: #F5F5F5;
+$color1: #FAFAFA;
 $color2: #151515;
 $color3: #ffff00ec;
-$color4: #237CFF;
-$color5: #09295a;
+$color4: #2f7df1;
+$color5: #103d80;
 $color6: #555555;
 $color7: #cdcdcd;
 $color8: #20a082;
 $color9: #7efadd;
 $color10: #d30000;
 $color11: #fab8b8;
+$color12: #215CB1;
+
 
 
 //fonts
