--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+  <div class="container__wrapper">
+      <div class="container__wrapper-img">
+        <img src="assets/image7.png" class="image"/>
+      </div>
+      <div class="container__wrapper-form">
+        <router-outlet></router-outlet>
+      </div>
+  </div>
+</div>
