--- a/src/abstract/_variables.scss
+++ b/src/abstract/_variables.scss
@@ -5,7 +5,7 @@ $color1: #FAFAFA;
 $color2: #151515;
 $color3: #ffff00ec;
 $color4: #2f7df1;
-$color5: #103d80;
+$color5: #05224e;
 $color6: #555555;
 $color7: #cdcdcd;
 $color8: #20a082;
@@ -13,6 +13,7 @@ $color9: #7efadd;
 $color10: #d30000;
 $color11: #fab8b8;
 $color12: #215CB1;
+$color13: #FFF;
 
 
 
