--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,5 @@
-<div class="container">
-  <div class="container__wrapper">
-      <div class="container__wrapper-img">
-        <img src="assets/image7.png" class="image"/>
-      </div>
-      <div class="container__wrapper-form">
-        <router-outlet></router-outlet>
-      </div>
-  </div>
-</div>
+<section class="container">
+    <div class="login">
+      <router-outlet></router-outlet>
+    </div>
+</section>
