create footer and style fix ---

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,6 @@
 @import "../abstract/abstract";
 
+.container{
+  @include screenSize(100vw,auto);
+  @include displayFlex(center,center,column);
+}
