--- a/src/abstract/_variables.scss
+++ b/src/abstract/_variables.scss
@@ -14,7 +14,10 @@ $color10: #d30000;
 $color11: #fab8b8;
 $color12: #215CB1;
 $color13: #FFF;
-
+$color14: #F2B906;
+$color15: #f3f3f3;
+$color16: #14803d;
+$color17: #15151588;
 
 
 //fonts
