--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,6 +5,8 @@
   padding: 1.5em 0;
   background-color: $color5;
   @include displayFlex(center,center,row);
+  position: fixed;
+  top:0;
   &__navbar{
     @include screenSize(70vw,auto);
     @include displayFlex(space-between,center,row);
