--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -30,7 +30,7 @@
         @include screenSize(100%,auto);
         @include displayFlex(space-between, center, row);
         .profile{
-          @include screenSize(50%,auto);
+          @include screenSize(auto,auto);
           @include displayFlex(flex-start,center,row);
           gap: 15px;
           &__user{
@@ -41,16 +41,41 @@
             color: $color1;
           }
         }
+        .tickets{
+          @include screenSize(auto,auto);
+          position: relative;
+          &__trips{
+            position: absolute;
+            right:0;
+            top: 1em;
+            background-color: $color10;
+            color: $color1;
+            padding: .6em 1em;
+            border-radius: 50px;
+            @include cardShadow();
+          }
+          &__image{
+            @include screenSize(80px,auto)
+          }
+
+        }
         .toggleSession{
           @include screenSize(auto,auto);
           @include displayFlex(center, center, row);
           a{
             color: $color1;
             cursor: pointer;
-            padding: 1em 2.5em;
-            background: $color12;
+            padding: .5em;
             border-radius: .5em;
-            @include cardShadow();
+            transition: all .5s ease-in-out;
+            &:hover{
+              background: $color12;
+              @include cardShadow();
+              transition: all .5s ease-in;
+            }
+            img{
+              @include screenSize(40px,auto);
+            }
           }
         }
       }
